--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
       "parser": "babel-eslint"
     }
   },
+  "scripts": {
+    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions"
