--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^1.3.3",
     "core-js": "^3.4.4",
     "echarts": "^5.4.1",
     "prismjs": "^1.19.0",
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "@vue/composition-api": "^1.7.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-prismjs": "^2.0.1",
     "eslint": "^5.16.0",
@@ -45,7 +46,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
